Added sorting and order functionality to GET /pets endpoint with case-insensitive string comparison